kubernetes/apps/immich-system/immich/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: immich-egress-external
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/instance: immich
    egress:
      - toEndpoints:
          - {}
      - toFQDNs:
          - matchName: cas-server.xethub.hf.co
          - matchName: transfer.xethub.hf.co
          - matchName: huggingface.co
          - matchPattern: "*.modelscope.cn"
        toPorts:
          - ports:
              - port: "443"
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: immich-egress-internal
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: immich
  egress:
    - toEndpoints:
        - matchLabels:
            app: immich-dragonfly
      toPorts:
        - ports:
            - port: "6379"
